--- a/templates/home.html
+++ b/templates/home.html
@@ -1,7 +1,10 @@
-<html lang="en">
-	<head>
+<!doctype html>
+<html>
 
-		
+	<head>
+		<meta charset="utf-8">
+
+		<title>django js plugin</title>
 	</head>
 
 	<body>
@@ -10,9 +13,9 @@
 
 
 	<div id="plugin-root"></div>
-	<script src="/plugin/widget.js"></script>
-	</body>
+	<script src="/plugin/widget.js?account_id=567"></script>
 
+	</body>
 
 
 </html>
