All sorts of important updates. Now with click tracking

--- a/templates/home.html
+++ b/templates/home.html
@@ -13,7 +13,7 @@
 
 
 	<div id="plugin-root"></div>
-	<script src="/plugin/widget.js?account_id=567"></script>
+	<script src="/plugin/widget.js?page_id=568"></script>
 
 	</body>
 
