Adding widget2, which will parse the document for a specific class and act on those

--- a/templates/home.html
+++ b/templates/home.html
@@ -5,6 +5,8 @@
 		<meta charset="utf-8">
 
 		<title>django js plugin</title>
+
+        <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js" language="javascript"></script>
 	</head>
 
 	<body>
@@ -14,6 +16,17 @@
 
 	<div id="plugin-root"></div>
 	<script src="/plugin/widget.js?page_id=568"></script>
+
+
+    <hr>
+
+    <div class="plugin-image" data-size="100"></div>
+        <div class="plugin-image" data-size="200"></div>
+        <div class="plugin-image" data-size="300"></div>
+        <div class="plugin-image" data-size="400"></div>
+        <div class="plugin-image" data-size="500"></div>
+
+    <script src="/plugin/widget2.js"></script>
 
 	</body>
 
